[tool.poetry]
name = "wissenschaft"
version = "0.1.0"
description = ""
authors = ["Friedrich Eichenroth <friedrich.eichenroth@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pypdf = "^3.15.5"
langchain = "^0.0.285"
openai = "^0.28.0"
tiktoken = "^0.4.0"
faiss-cpu = "^1.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
